# xeriscointestnet

./: .gitignore  Cargo.toml  README.md  address.txt  cert.pem  key-pubkey.pem  key.pem
src/: Dockerfile  config.toml  explorer.html  explorer.rs  genesis.rs  ledger.rs  main.rs  merkle.rs  minerd.cpp  network.rs  poh.rs  pow.rs  staking.rs  submit_tx.sh  tx_pool.rs  wallet.js  xeris_wallet.js
